# unified-attestation

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
appraisers/cca-hydra/: Cargo.toml
appraisers/cca-hydra/src/: lib.rs
appraisers/cca/src/: lib.rs
appraisers/csv-hydra/: Cargo.toml
appraisers/csv-hydra/src/: lib.rs
appraisers/csv/src/: lib.rs
appraisers/itrustee/src/: lib.rs
appraisers/mock/src/: lib.rs
appraisers/tdx-hydra/: Cargo.toml
appraisers/tdx-hydra/src/: lib.rs
appraisers/tdx/src/: lib.rs
appraisers/virtcca/src/: lib.rs
attester/: Cargo.toml
attester/src/: config.rs  evidence.rs  main.rs
config/: attester-cca-hydra.toml  attester-cca.toml  attester-csv-hydra.toml  attester-csv.toml  attester-itrustee.toml  attester-tdx-hydra.toml  attester-tdx.toml  attester-virtcca.toml  attester.toml  verifier-cca-hydra.toml  verifier-csv-hydra.toml  verifier-csv.toml  verifier-itrustee.toml  verifier-tdx-hydra.toml  verifier-tdx.toml  verifier-virtcca.toml  verifier.toml
contracts/: DeviceVCRecord.sol  README.md
device_vc_chain/: Move.toml
docs/: cca.md  config.md  csv.md  design.md  hydra.md  operations.md  protocol.md
docs/en/: cca.md  config.md  csv.md  hydra.md  itrustee.md  operations.md  protocol.md  tdx.md  virtcca.md
docs/zh/: cca.md  config.md  csv.md  itrustee.md  operations.md  protocol.md  tdx.md  virtcca.md
evidence-verify/: README.md
hydra/: Cargo.toml
hydra/examples/: shrubs_roots.rs
hydra/src/: circuit.rs  device_vc.rs  lib.rs  nonce.rs  poseidon.rs  prove.rs  setup.rs  shrubs_tree.rs  verify.rs
protos/: attestation.proto
protos/src/: lib.rs
relying-party/: Cargo.toml
relying-party/src/: main.rs
scripts/: build-appraisers.sh  gen-keys.sh  run-mvp.sh
tee-evidence/: Cargo.toml  README.md  build.rs
tee-evidence/src/: lib.rs
tee-evidence/src/virtcca/: virtcca.rs
verifier/: Cargo.toml
verifier/src/: cca_native.rs  config.rs  csv_native.rs  ear.rs  grpc.rs  itrustee_native.rs  main.rs  virtcca_native.rs  wasm_host.rs
