[package]
name = "attester"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
base64.workspace = true
clap.workspace = true
hydra = { path = "../hydra" }
prost.workspace = true
protos = { path = "../protos" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = "2"
