[package]
name = "hydra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-bls12-381 = { workspace = true }
ark-groth16   = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std  = { workspace = true }
ark-ff        = { workspace = true }
ark-std       = { workspace = true }
ark-snark     = { workspace = true }
ark-serialize = { workspace = true }
ark-crypto-primitives = { workspace = true }
num-bigint = { workspace = true }
blake2 = { version = "0.10", default-features = false }

# blockchain feature dependencies (chain interaction via cast CLI, no blockchain SDK)
anyhow = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[features]
default = ["std"]
# On-chain device VC storage (device_vc module), requires Foundry `cast` CLI. Disabled by default.
blockchain = ["std", "anyhow", "hex", "serde", "serde_json", "sha2"]
# Host build enables std + snark prover; wasm component build turns off default, uses verify only
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-r1cs-std/std",
    "ark-relations/std",
    "ark-bls12-381/std",
    "ark-groth16/std",
    "ark-crypto-primitives/std",
    "ark-serialize/std",
    "num-bigint/std",
]
