[package]
name = "relying-party"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
hydra = { path = "../hydra", optional = true, features = ["blockchain"] }
prost.workspace = true
protos = { path = "../protos" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
blockchain = ["hydra/blockchain"]
